--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
