chore : styled-components 이용한 스타일 초기화 및 기본 사용 설정 #5

--- a/tsconfig.path.json
+++ b/tsconfig.path.json
@@ -16,6 +16,7 @@
       "@router": ["router"],
       "@router/*": ["router/*"],
       "@store/*": ["store/*"],
+      "@styles": ["styles"],
       "@styles/*": ["styles/*"],
       "@type/*": ["type/*"],
       "@utils/*": ["utils/*"]
