--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
