--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-daum-postcode": "^3.1.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-inlinesvg": "^3.0.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
