--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,8 @@
     "import/no-cycle": "off",
     "react/jsx-filename-extension": ["warn", { "extensions": ["ts", ".tsx"] }],
     "import/extensions": ["error", "ignorePackages", { "ts": "never", "tsx": "never" }],
-    "no-unused-vars": 1,
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["warn"],
     "react/jsx-props-no-spreading": 0,
     "react/function-component-definition": 0,
     "react/react-in-jsx-scope": "off",
