--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
+    "net": "^1.0.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
@@ -27,6 +28,8 @@
     "react-slick": "^0.29.0",
     "recoil": "^0.7.4",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
@@ -53,6 +56,8 @@
   },
   "devDependencies": {
     "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
