refactor : socket 분리를 위한 리펙토링

--- a/tsconfig.path.json
+++ b/tsconfig.path.json
@@ -15,6 +15,7 @@
       "@query/*": ["query/*"],
       "@router": ["router"],
       "@router/*": ["router/*"],
+      "@socket/*": ["socket/*"],
       "@store/*": ["store/*"],
       "@styles": ["styles"],
       "@styles/*": ["styles/*"],
