--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "net": "^1.0.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@types/react-datepicker": "^4.4.2",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
     "@types/uuid": "^8.3.4",
