--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
+    "use-long-press": "^2.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
